# Tokdash

./: .gitignore  LOCAL_CUSTOMIZATION.md  README.md  README_CN.md  pyproject.toml  run_local.py
.github/workflows/: ci.yml
docs/: API.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORTED_CLIENTS.md
docs/development/: CHANGELOG.md  RELEASING.md  ROADMAP.md
docs/development/internals/: CODEX_USAGE_COUNTING.md  WINDOWS_CLIENT_PATHS.md  WINDOWS_SUPPORT_PLAN.md
docs/guides/: ONBOARDING.md  REMOTE_ACCESS.md
docs/guides/agents/openclaw_reporting/: AGENTS.md  openclaw_cron_job.py
docs/guides/agents/systemd/: AGENTS.md  BACKGROUND_RUN.md
docs/guides/agents/systemd/health-probe/: README.md  tokdash-health.service  tokdash-health.timer
docs/guides/agents/systemd/templates/: com.tokdash.tokdash.plist  tokdash.service
docs/guides/statusline/: README.md  statusline-full.sh  statusline-minimal.sh  statusline.ps1
docs/reference/: API.md  HISTORY_RETENTION.md  SUPPORTED_CLIENTS.md
scripts/: bench_openclaw.py
src/tokdash/: __init__.py  api.py  clientpaths.py  compute.py  pricing_db.json  projects.py  sessions.py  usage_store.py
src/tokdash/onboard/: engine.py  launchd.py  systemd.py
src/tokdash/sources/: coding_tools.py  openclaw.py
src/tokdash/sources/quota/: __init__.py  codex.py
src/tokdash/static/: index.html  projects.html
tests/: test_api_smoke.py  test_claude_multi_dir.py  test_clientpaths_windows.py  test_copilot_cli_parser.py  test_hermes_parser.py  test_onboard.py  test_openclaw_cachewrite_tokens.py  test_pi_agent_parser.py  test_pricing_db_contract.py  test_pricing_db_editor_api.py  test_quota_network.py  test_usage_store.py  test_usage_store_quota.py
