[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokdash"
version = "0.3.2"
description = "Local token & cost dashboard for AI coding tools"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Jingbiao Mei" },
]
keywords = ["token", "cost", "dashboard", "llm", "ai", "codex", "claude", "gemini", "kimi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.urls]
Homepage = "https://github.com/JingbiaoMei/tokdash"
Repository = "https://github.com/JingbiaoMei/tokdash"
Issues = "https://github.com/JingbiaoMei/tokdash/issues"
Changelog = "https://github.com/JingbiaoMei/tokdash/blob/main/docs/CHANGELOG.md"

[project.scripts]
tokdash = "tokdash.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
tokdash = [
  "pricing_db.json",
  "static/*",
  "static/**/*",
]
