[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokdash"
version = "1.2.1"
description = "Local token & cost dashboard for AI coding tools"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Jingbiao Mei" },
]
keywords = ["token", "cost", "dashboard", "llm", "ai", "codex", "claude", "gemini", "antigravity", "kimi"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  # PEP 440-correct version comparison for the opt-in update check (updatecheck.py); the
  # hand-rolled fallback is only correct for plain X.Y.Z releases, not pre/post/dev.
  "packaging>=21.0",
]

[project.urls]
Homepage = "https://github.com/JingbiaoMei/tokdash"
Repository = "https://github.com/JingbiaoMei/tokdash"
Issues = "https://github.com/JingbiaoMei/tokdash/issues"
Changelog = "https://github.com/JingbiaoMei/tokdash/blob/main/docs/development/CHANGELOG.md"

[project.scripts]
tokdash = "tokdash.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
tokdash = [
  "pricing_db.json",
  "static/*",
  "static/**/*",
]
